<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:aapp="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        tools:context=".Activity.CadastroUsuario">

        <include
            android:id="@+id/toolbarGenerica"
            layout="@layout/toolbar_generica" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="690dp">

            <EditText
                android:id="@+id/nomeId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:autofillHints=""
                android:background="@drawable/fundo_caixa_texto"
                android:ems="10"
                android:hint="@string/nome_completo"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/cinza"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintHorizontal_bias="0.495"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/cpfId"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/fundo_caixa_texto"
                android:ems="10"
                android:hint="@string/cpf"
                android:importantForAutofill="no"

                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="@color/cinza"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintHorizontal_bias="0.495"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/dataNascId"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/emailId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/fundo_caixa_texto"
                android:ems="10"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/cinza"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintHorizontal_bias="0.495"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/cpfId"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/senhaId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/fundo_caixa_texto"
                android:ems="10"
                android:hint="@string/senh"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/cinza"
                aapp:layout_constraintBottom_toBottomOf="parent"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintHorizontal_bias="0.49"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/emailId"
                aapp:layout_constraintVertical_bias="0.0"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/dataNascId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/fundo_caixa_texto"
                android:ems="10"
                android:hint="@string/data_de_nascimento"
                android:importantForAutofill="no"
                android:inputType="date"
                android:padding="10dp"
                android:textColorHint="@color/cinza"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintHorizontal_bias="0.49"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/nomeId"
                tools:targetApi="o" />

            <Button
                android:id="@+id/cadastrarId"
                android:layout_width="108dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/botao_radius"
                android:text="@string/cadastrar"
                android:textColor="@color/textColorPrimary"
                aapp:layout_constraintBottom_toBottomOf="parent"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/senhaId" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageUsuarioId"
                android:layout_width="156dp"
                android:layout_height="150dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/perf"
                android:onClick="abrirGaleria"
                android:padding="0dp"
                android:src="@drawable/com_facebook_profile_picture_blank_square"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toTopOf="parent"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="245dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="*Clique e selecione uma foto de perfil"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintStart_toStartOf="parent"
                aapp:layout_constraintTop_toBottomOf="@+id/imageUsuarioId" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="*Ao preencher todos os campos clique em cadastrar!"
                aapp:layout_constraintBottom_toBottomOf="parent"
                aapp:layout_constraintEnd_toEndOf="parent"
                aapp:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</ScrollView>