<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EventosCadastrados">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activity.EventosCadastrados">

        <include
            android:id="@+id/toolbarPrincipal"
            layout="@layout/activity_toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnImagem1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:src="@drawable/add_camera" />

            <ImageView
                android:id="@+id/btnImagem2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:src="@drawable/add_camera" />

            <ImageView
                android:id="@+id/btnImagem3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:src="@drawable/add_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="106dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:text="Categoria..."
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="225dp"
                android:layout_height="25dp"
                android:layout_marginRight="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txnome"
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nome"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/tNome"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/nomeEvent"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txTipo"
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tipo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="visible" />


            <EditText
                android:id="@+id/tTipo"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tip"
                android:inputType="textPersonName"
                tools:targetApi="o" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txData"
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/data"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="visible" />


            <EditText
                android:id="@+id/tData"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="     /     /    "
                android:importantForAutofill="no"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txHora"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/hor"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="visible" />


            <EditText
                android:id="@+id/tHora"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="     :"
                android:inputType="time"
                tools:targetApi="o" />

        </LinearLayout>


        <TextView
            android:id="@+id/txDesc"
            android:layout_width="97dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/descri_o"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/tDescricao"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:background="#ffffff"
            android:gravity="top"
            android:hint="Descreva o evento completo para que possa chamar atenção do publico..."
            android:inputType="textMultiLine"
            tools:targetApi="o" />


        <TextView
            android:id="@+id/txLoc"
            android:layout_width="223dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="Localização do Evento:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editLocal"
                android:layout_width="282dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/circulo_verde"
                android:drawablePadding="6dp"
                android:ems="10"
                android:enabled="true"
                android:hint="Insira um local"
                android:inputType="textPersonName"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />


            <Button
                android:layout_width="29dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_my_location_black_24dp"
                android:onClick="marcarLocal"
                android:padding="10dp"
                tools:ignore="OnClick" />


        </LinearLayout>


        <Button
            android:id="@+id/btnSalvarId"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botao_radius"
            android:text="@string/criar"
            android:textColor="@android:color/background_light">

        </Button>

    </LinearLayout>
</ScrollView>